fixed padding content on mobile

--- a/css/main-content.css
+++ b/css/main-content.css
@@ -83,8 +83,7 @@
     }
     
     .main-content-info {
-        margin-left: 1rem;
-        margin-top: 1rem;
+        margin: 1rem;
         text-align: center;
     }
 
